Customized to Courage verse

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,17 +22,19 @@ const title = "Home";
       <Starfall />
 
       <!-- Hero Image and Title -->
-      <div class="hero-body">
+      <div class="hero-body" >
         <div class="container">
           <div class="columns is-vcentered">
             <!-- Landing page Title -->
             <div class="column is-5 landing-caption">
               <h1 class="title is-1 is-light is-semibold is-spaced main-title">
-                Cryptocurrency Exchange Market
+                Courage Coin
               </h1>
+              <h2 class="title is-4 is-light is-semibold is-spaced">
+                Relive the Fear, HODL the Laughter
+              </h2>
               <h2 class="subtitle is-5 is-light is-thin">
-                Cryptocurrency brought to the next level. Join our ICO for
-                supercharged rates.
+                Unleash Nostalgia with <span style="color: magenta;">$COWARD</span>: A Community-Driven Crypto Inspired by Courage the Cowardly Dog
               </h2>
               <!-- CTA -->
               <p class="buttons">
@@ -53,11 +55,11 @@ const title = "Home";
               </p>
             </div>
             <!-- Hero image -->
-            <div class="column is-7">
-              <figure class="image">
-                <img src="/img/illustrations/buildings.svg" alt="" />
+             <div class="column is-7 is-mobile">
+              <figure class="image ">
+                <img src="/img/illustrations/courage_purple.jpg" alt="" />
               </figure>
-            </div>
+            </div> 
           </div>
         </div>
       </div>
