--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@
     <div class="footer-logo">
       <a href="#">
         <img class="rotating" src="/img/logo/krypton-gradient.svg" alt="" />
-        <div class="brand-name">Krypton</div>
+        <div class="brand-name">Courage Verse</div>
         <div class="brand-subtitle">Blockchain brought to another level</div>
       </a>
     </div>
@@ -65,12 +65,11 @@
       </div>
     </div>
     <!-- Copyright -->
-    <p class="k-copyright">© 2018-2021 | Krypton. All Rights Reserved</p>
+    <p class="k-copyright">© 2022-2023 | Courage Verse. All Rights Reserved</p>
     <br />
     <!-- Made by -->
     <p class="coded-by">
-      Designed and Coded by <a href="https://cssninja.io" target="_blank"
-        >Css Ninja</a>
+      Designed and Coded by Hamza Css Ninja
     </p>
   </div>
 
