--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -12,7 +12,7 @@
     <div class="navbar-brand">
       <a href="/" class="navbar-item">
         <img class="rotating" src="/img/logo/krypton.svg" alt="" />
-        <span class="brand-name">Krypton</span>
+        <span class="brand-name">Courage Verse</span>
       </a>
       <!-- Responsive toggle -->
       <div class="navbar-burger" @click="openMobileMenu()">
