--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -35,3 +35,4 @@ TABLE OF CONTENTS
 @import 'layout/footer';
 @import 'layout/pageloader';
 @import 'layout/responsive';
+@import 'utilities/_utils'
