--- a/src/styles/utilities/_utils.scss
+++ b/src/styles/utilities/_utils.scss
@@ -92,18 +92,29 @@ body {
 }
 
 //Input placeholders
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+::-webkit-input-placeholder {
+    /* Chrome/Opera/Safari */
     color: $placeholder;
 }
 
-::-moz-placeholder { /* Firefox 19+ */
+::-moz-placeholder {
+    /* Firefox 19+ */
     color: $placeholder;
 }
 
-:-ms-input-placeholder { /* IE 10+ */
+:-ms-input-placeholder {
+    /* IE 10+ */
     color: $placeholder;
 }
 
-:-moz-placeholder { /* Firefox 18- */
+:-moz-placeholder {
+    /* Firefox 18- */
     color: $placeholder;
+}
+
+.add-home-background {
+    background-image: url(/img/illustrations/courage_purple.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center
 }
