Added relevent image

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@
     <!-- Logo -->
     <div class="footer-logo">
       <a href="#">
-        <img class="rotating" src="/img/logo/krypton-gradient.svg" alt="" />
+        <img class="rotating" src="/img/courage_logo.png" alt="" />
         <div class="brand-name">Courage Verse</div>
         <div class="brand-subtitle">Blockchain brought to another level</div>
       </a>
@@ -51,7 +51,7 @@
       <div class="column is-4">
         <ul class="footer-links">
           <li>
-            <a href="#">Register</a>
+            <a href="#">Buy Now</a>
           </li>
 
           <li>
