--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -72,7 +72,7 @@
             href="#"
             class="button k-button k-primary raised has-gradient slanted"
           >
-            <span class="text">Register</span>
+            <span class="text">Buy Now</span>
             <span class="front-gradient"></span>
           </a>
         </div>
