--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -57,7 +57,7 @@ const title = "Home";
             <!-- Hero image -->
              <div class="column is-7 is-hidden-tablet">
               <figure class="image ">
-                <img src="/img/illustrations/courage_purple.jpg" alt="" />
+                <img src="/img/illustrations/courage_purple_mobile.png" alt="" />
               </figure>
             </div> 
           </div>
