--- a/src/styles/utilities/_utils.scss
+++ b/src/styles/utilities/_utils.scss
@@ -113,7 +113,7 @@ body {
 }
 
 .add-home-background {
-    background-image: url(/img/illustrations/courage_purple.jpg);
+    background-image: url(/img/illustrations/courage_purple.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center
